  *   - Added new USB_Host_ConfigurationNumber global variable to indicate the selected configuration in an attached device
  *   - Added new USB_Host_GetDeviceStatus() function to the host standard request function set
  *   - Added AVR USB XMEGA architecture port (currently incomplete/experimental)
  *   - Added new STRINGIFY() and STRINGIFY_EXPANDED() convenience macros
  *  - Library Applications:
  *   - Added RNDIS device mode to the Webserver project
  *   - Added new incomplete AndroidAccessoryHost Host LowLevel demo
  *   - Added new HIDReportViewer project
  *   - Added new MediaControl project
  *   - Added new AudioInputHost Host ClassDriver demo
  *   - Added new AudioOutputHost Host ClassDriver demo
  *   - Added new AudioInputHost Host LowLevel demo
  *   - Added new AudioOutputHost Host LowLevel demo
  *   - Added new "checksource" target to all library project makefiles
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Altered the definition of the USB_Audio_Descriptor_Format_t descriptor so that the user is now responsible for supplying
  *     the supported audio sampling rates, to allow for multiple audio interfaces with different numbers of supported rates and/or
  *     continuous sample rates
  *   - Pipe_BoundEndpointNumber() has been renamed to Pipe_GetBoundEndpointAddress(), and now returns the correct endpoint direction
  *     as part of the endpoint address
  *   - Renamed global state variables that are specific to a certain USB mode to clearly indicate which mode the variable relates to,
  *     by changing the USB_* prefix to USB_Device_* or USB_Host_*
  *   - Removed the HOST_STATE_WaitForDeviceRemoval and HOST_STATE_Suspended host state machine states, as these are no longer required
  *   - Altered the USB_Host_SetDeviceConfiguration() function to update the global Host state machine state and the new
  *     USB_Host_ConfigurationNumber global as required